2005-07-27  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        * org/omg/DynamicAny/DynUnion.java,
        org/omg/DynamicAny/DynUnionOperations.java,
        org/omg/DynamicAny/NameDynAnyPair.java,
        org/omg/DynamicAny/NameValuePair.java,
        org/omg/DynamicAny/DynAny.java,
        org/omg/DynamicAny/DynAnyOperations.java,
        org/omg/DynamicAny/DynArray.java,
        org/omg/DynamicAny/DynArrayOperations.java,
        org/omg/DynamicAny/DynEnum.java,
        org/omg/DynamicAny/DynEnumOperations.java,
        org/omg/DynamicAny/DynFixed.java,
        org/omg/DynamicAny/DynFixedOperations.java,
        org/omg/DynamicAny/DynSequence.java,
        org/omg/DynamicAny/DynSequenceOperations.java,
        org/omg/DynamicAny/DynStructOperations.java,
        org/omg/DynamicAny/DynStruct.java: New files. 

2005-07-27  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/JViewport.java:
	(scrollRectToVisible): New method, overrides JComponent method as 
	intended.

2005-07-28  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* native/jni/java-nio/java_nio_MappedByteBufferImpl.c 
	(get_raw_values): Add env to getObjectClass call for 64-bit case.

2005-07-28  David Gilbert  <david.gilbert@object-refinery.com>

	* java/text/AttributedStringIterator.java: reformatted.
	
2005-07-27  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/plaf/basic/BasicListUI.java:
	(KeyHandler.keyPressed): Ensure the new lead selection index is visible
	after making a change.
	(MouseInputHandler.mouseClicked): Likewise.

2005-07-27  Aaron Luchko  <aluchko@redhat.com>

	* gnu/classpath/jdwp/util/PacketProcessor.java: Implement 
	PrivilegedAction to allow privilaged operations.

2005-07-27  Mark Wielaard  <mark@klomp.org>

	* doc/www.gnu.org/events/events.wml: Add old and upcomming events.

2005-07-27  Aaron Luchko  <aluchko@redhat.com>

	* gnu/classpath/jdwp/util/Value.java: Class to read/write JDWP
	untagged values and tagged values.