@@ -49,6 +49,7 @@ import java.awt.event.ComponentEvent;
 import java.awt.event.ComponentListener;
 import java.awt.event.FocusEvent;
 import java.awt.event.FocusListener;
+import java.awt.event.InputEvent;
 import java.awt.event.KeyAdapter;
 import java.awt.event.KeyEvent;
 import java.awt.event.MouseEvent;
@@ -208,12 +209,12 @@ public class BasicListUI extends ListUI
       if ((evt.getKeyCode() == KeyEvent.VK_DOWN)
           || (evt.getKeyCode() == KeyEvent.VK_KP_DOWN))
         {
-          if (!evt.isShiftDown())
+          if (evt.getModifiers() == 0)
             {
               BasicListUI.this.list.clearSelection();
               BasicListUI.this.list.setSelectedIndex(Math.min(lead+1,max));
             }
-          else 
+          else if (evt.getModifiers() == InputEvent.SHIFT_MASK)
             {
               BasicListUI.this.list.getSelectionModel().
                 setLeadSelectionIndex(Math.min(lead+1,max));
@@ -222,12 +223,12 @@ public class BasicListUI extends ListUI
       else if ((evt.getKeyCode() == KeyEvent.VK_UP)
                || (evt.getKeyCode() == KeyEvent.VK_KP_UP))
         {
-          if (!evt.isShiftDown())
+          if (evt.getModifiers() == 0)
             {
               BasicListUI.this.list.clearSelection();
               BasicListUI.this.list.setSelectedIndex(Math.max(lead-1,0));
             }
-          else
+          else if (evt.getModifiers() == InputEvent.SHIFT_MASK)
             {
               BasicListUI.this.list.getSelectionModel().
                 setLeadSelectionIndex(Math.max(lead-1,0));
@@ -242,13 +243,16 @@ public class BasicListUI extends ListUI
           // FIXME: implement, need JList.ensureIndexIsVisible to work
         }
       else if (evt.getKeyCode() == KeyEvent.VK_BACK_SLASH
-               && evt.isControlDown())
+               && (evt.getModifiers() == InputEvent.CTRL_MASK))
         {
             BasicListUI.this.list.clearSelection();
         }
       else if ((evt.getKeyCode() == KeyEvent.VK_HOME)
                || evt.getKeyCode() == KeyEvent.VK_END)
         {
+          if (evt.getModifiers() != 0 && 
+              evt.getModifiers() != InputEvent.SHIFT_MASK)
+            return;
           // index is either 0 for HOME, or last cell for END
           int index = (evt.getKeyCode() == KeyEvent.VK_HOME) ? 0 : max;
           
@@ -264,14 +268,16 @@ public class BasicListUI extends ListUI
               setLeadSelectionIndex(index);
         }
       else if ((evt.getKeyCode() == KeyEvent.VK_A || evt.getKeyCode()
-                == KeyEvent.VK_SLASH) && evt.isControlDown())
+                == KeyEvent.VK_SLASH) && (evt.getModifiers() == 
+                                          InputEvent.CTRL_MASK))
         {
           BasicListUI.this.list.setSelectionInterval(0, max);
           // this next line is to restore the lead selection index to the old
           // position, because select-all should not change the lead index
           BasicListUI.this.list.addSelectionInterval(lead, lead);
         }
-      else if (evt.getKeyCode() == KeyEvent.VK_SPACE && evt.isControlDown())
+      else if (evt.getKeyCode() == KeyEvent.VK_SPACE && 
+               (evt.getModifiers() == InputEvent.CTRL_MASK))
         {
           BasicListUI.this.list.getSelectionModel().
             setLeadSelectionIndex(Math.min(lead+1,max));
@@ -300,17 +306,7 @@ public class BasicListUI extends ListUI
       int index = BasicListUI.this.locationToIndex(list, click);
       if (index == -1)
         return;
-      if (event.isControlDown())
-        {
-          if (BasicListUI.this.list.getSelectionMode() == 
-              ListSelectionModel.SINGLE_SELECTION)
-            BasicListUI.this.list.setSelectedIndex(index);
-          else if (BasicListUI.this.list.isSelectedIndex(index))
-            BasicListUI.this.list.removeSelectionInterval(index,index);
-          else
-            BasicListUI.this.list.addSelectionInterval(index,index);
-        }
-      else if (event.isShiftDown())
+      if (event.isShiftDown())
         {
           if (BasicListUI.this.list.getSelectionMode() == 
               ListSelectionModel.SINGLE_SELECTION)
@@ -333,6 +329,16 @@ public class BasicListUI extends ListUI
             // The most natural thing to do is the following:
             BasicListUI.this.list.getSelectionModel().
               setLeadSelectionIndex(index);
+        }
+      else if (event.isControlDown())
+        {
+          if (BasicListUI.this.list.getSelectionMode() == 
+              ListSelectionModel.SINGLE_SELECTION)
+            BasicListUI.this.list.setSelectedIndex(index);
+          else if (BasicListUI.this.list.isSelectedIndex(index))
+            BasicListUI.this.list.removeSelectionInterval(index,index);
+          else
+            BasicListUI.this.list.addSelectionInterval(index,index);
         }
       else
         BasicListUI.this.list.setSelectedIndex(index);
